--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,8 +38,8 @@
         </activity>
         <activity
             android:name=".AddActivity"
-            android:exported="false"
-            android:windowSoftInputMode="stateVisible|adjustPan">
+            android:windowSoftInputMode="adjustPan"
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
